Updates to research
